--- a/others/views/login.ejs
+++ b/others/views/login.ejs
@@ -16,7 +16,7 @@
 		<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
 		  <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
 			<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-     width="60.667px" height="60.334px" viewBox="0 0 141.667 126.334" enable-background="new 0 0 141.667 126.334"
+     width="25.667px" height="25.334px" viewBox="0 0 141.667 126.334" enable-background="new 0 0 141.667 126.334"
      xml:space="preserve">
 <g>
     <g>
@@ -122,7 +122,7 @@
 				</div>
 				<div class="flex-grow pl-4">
 				  <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">STEP 1</h2>
-				  <p class="leading-relaxed">VHS cornhole pop-up, try-hard 8-bit iceland helvetica. Kinfolk bespoke try-hard cliche palo santo offal.</p>
+				  <p class="leading-relaxed">Collect required documents</p>
 				</div>
 			  </div>
 			  <div class="flex relative pb-12">
@@ -136,7 +136,7 @@
 				</div>
 				<div class="flex-grow pl-4">
 				  <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">STEP 2</h2>
-				  <p class="leading-relaxed">Vice migas literally kitsch +1 pok pok. Truffaut hot chicken slow-carb health goth, vape typewriter.</p>
+				  <p class="leading-relaxed">Locate the nearest permanent enrolment centre</p>
 				</div>
 			  </div>
 			  <div class="flex relative pb-12">
@@ -151,7 +151,7 @@
 				</div>
 				<div class="flex-grow pl-4">
 				  <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">STEP 3</h2>
-				  <p class="leading-relaxed">Coloring book nar whal glossier master cleanse umami. Salvia +1 master cleanse blog taiyaki.</p>
+				  <p class="leading-relaxed">Submission of biometric data</p>
 				</div>
 			  </div>
 			  <div class="flex relative pb-12">
@@ -166,7 +166,7 @@
 				</div>
 				<div class="flex-grow pl-4">
 				  <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">STEP 4</h2>
-				  <p class="leading-relaxed">VHS cornhole pop-up, try-hard 8-bit iceland helvetica. Kinfolk bespoke try-hard cliche palo santo offal.</p>
+				  <p class="leading-relaxed">Acknowledgement slip</p>
 				</div>
 			  </div>
 			  <div class="flex relative">
@@ -178,7 +178,7 @@
 				</div>
 				<div class="flex-grow pl-4">
 				  <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">FINISH</h2>
-				  <p class="leading-relaxed">Pitchfork ugh tattooed scenester echo park gastropub whatever cold-pressed retro.</p>
+				  <p class="leading-relaxed">Check status of your Aadhaar</p>
 				</div>
 			  </div>
 			</div>
