--- a/others/views/reg.ejs
+++ b/others/views/reg.ejs
@@ -12,7 +12,7 @@
 
 	<div class="limiter">
 		<div class="container-login100">
-			<div class="wrap-login100">
+			<div class="wrap-login100" style="justify-content: center;">
 				<form class="login100-form validate-form" id="forminfo" method="POST">
 					
 					<span class="login100-form-title p-b-43">
